# qcc730

./: .gn  BUILD.gn  Kconfig  Makefile  NOTICE  README.md  build.py  build.sh  configs_decl.gni  imagename.txt  intg.py  notice.txt  qccsdk.py  sdkScopeEnv.json
arch/arm/system/: BUILD.gn
bootloader/HOSTED_SBL/: BUILD.gn  makefile.mk
bootloader/HOSTED_SBL/common/: sbl_common.h  sbl_version_build.h
bootloader/HOSTED_SBL/debug/: boot_debug.c  boot_log.c  boot_print.c
bootloader/HOSTED_SBL/include/: boot_debug.h  boot_elf_loader.h  boot_elf_mem.h  boot_error_if.h  boot_handler.h  boot_log.h  boot_module_id.h  boot_print.h  elf_header.h  fdt.h  miprogressive.h  nt_bl_common.h  nt_bl_env.h  nt_bl_eventhandler.h  nt_bl_lock.h  nt_bl_mem.h  nt_bl_rng.h  nt_bl_rram_dxe.h  nt_bl_srec.h  nt_bl_srec_api.h  nt_bl_system_init.h  nt_bl_uart.h  nt_bl_vector_table.h  nt_bl_wdt.h  nt_gpio_api.h  pbl_patch_table.h  pbl_share.h  qcspi_slave_api.h  rram_fdt.h  sbl_ota.h
bootloader/HOSTED_SBL/sbl_auth/: sbl_auth.c
bootloader/HOSTED_SBL/src/: sbl_main.c  wifi_fw_sys_img_loader.c  wifi_fw_sys_img_loader.h  wifi_fw_sys_img_loader_api.h
bootloader/HOSTED_SBL/system/: nt_bl_rram_dxe.c  nt_gpio.c  qcspi_slave.c  rram_fdt.c  sbl_storage.c
demo/ambient_power_demo/: BUILD.gn  prj.conf
demo/ambient_power_demo/src/: ambient_power.h  ambient_power_demo.c  ambient_power_main.c
demo/common/: BUILD.gn
demo/common/crypto/: crypto_demo.c  crypto_demo.h
demo/common/hfc/: hfc_demo.c  hfc_demo.h
demo/common/lowpower/: lowpower_shell.c
demo/common/mgmtfilter/: mgmt_filter_demo.c  mgmt_filter_demo.h
demo/common/mpu/: mpu_demo.c  mpu_demo.h
demo/common/ota/: ota_demo.c  ota_demo.h
demo/common/platform/: platform_shell.c  rng_shell.c
demo/common/prof/: prof_demo.c  prof_demo.h  prof_demo_internal.h  prof_test_inst.c  prof_test_inst.h
demo/common/qcc/: qcc_demo.c  qcc_demo.h
demo/common/securefs/: securefs.c  securefs.h  securefs_demo.c  securefs_demo.h
demo/common/unit_test/: unit_test_shell.c
demo/common/wlan/: wifi_shell.c
demo/fs_demo/: BUILD.gn  prj.conf
demo/fs_demo/src/: fs_demo.c
demo/hello_world/: BUILD.gn  makefile.mk  prj.conf
demo/hello_world/src/: hello_world_main.c
demo/matter_demo/: BUILD.gn  prj.conf
demo/matter_demo/src/: matter_demo.c  matter_demo.h  matter_main.c  sbrk.c
demo/mqtt_demo/: BUILD.gn  README.md  prj.conf
demo/mqtt_demo/src/: mqtt_demo.c  mqtt_demo.h  mqtt_main.c
demo/posix_demo/: BUILD.gn  makefile.mk  prj.conf
demo/posix_demo/src/: posix_demo.c  posix_demo_main.c
demo/powertest_demo/: BUILD.gn  prj.conf
demo/powertest_demo/src/: powertest_demo.c  powertest_demo.h  powertest_demo_main.c
demo/qat_demo/: BUILD.gn  prj.conf
demo/qat_demo/src/: qat_common_demo.c  qat_demo.h  qat_demo_main.c  qat_fstore_demo.c  qat_http_server_demo.c  qat_httpc_demo.c  qat_httpc_demo.h  qat_mqtt_demo.c  qat_ota_demo.c  qat_powersave_demo.c  qat_tcpip_demo.c  qat_tcpip_demo.h  qat_wlan_demo.c
demo/qcli_demo/: BUILD.gn  makefile.mk  prj.conf  prj_mem_kpi.conf
demo/qcli_demo/src/: qcli_demo_main.c  sht40_task.c
drivers/: BUILD.gn
drivers/fw_upgrade/: qapi_firmware_upgrade.c
drivers/hfc/: qapi_hfc.c
drivers/lowpower/: lowpower_internal.h  qapi_lowpower.c
drivers/net/: qapi_httpc.c  qapi_httpsvr.c
drivers/peripherals/: qapi_flash.c  qapi_gpio.c  qapi_i2c.c  qapi_uart.c
drivers/platform/: qapi_fatal_err.c  qapi_fw_info.c  qapi_heap_status.c  qapi_rram.c  qapi_rtc.c
drivers/wlan/: qapi_wlan_8021x.c  qapi_wlan_8021x.h  qapi_wlan_base.c  qapi_wlan_p2p.c  qapi_wlan_p2p.h  qapi_wlan_param_group.c  wlan_drv.c  wlan_drv.h  wlan_qapi_helper.c  wlan_qapi_helper.h  wmi_api.c  wmi_api.h
include/: BUILD.gn  iot_wifi.h  makefile.mk  nt_devcfg_byte_seq.h
include/api/: assert.h  ctype.h  stdlib.h
include/qapi/: qapi.h  qapi_console.h  qapi_fatal_err.h  qapi_firmware_upgrade.h  qapi_flash.h  qapi_gpio.h  qapi_heap_status.h  qapi_hfc.h  qapi_httpc.h  qapi_httpsvr.h  qapi_i2c.h  qapi_lowpower.h  qapi_prng.h  qapi_rram.h  qapi_rtc.h  qapi_uart.h  qapi_wlan.h
include/qapi/common/: qapi_status.h  qapi_types.h  qapi_version.h
include/qapi/wlan/: qapi_wlan_base.h  qapi_wlan_errors.h  qapi_wlan_misc.h  qapi_wlan_param_group.h
kernel/freertos/: BUILD.gn
kernel/qurt/: BUILD.gn
lib/: BUILD.gn  Kconfig  makefile.mk
lib/libc/include/: assert_internal.h  ctype_internal.h  printfext.h  safeAPI.h  stdlib_internal.h
lib/libc/source/: assert.c  malloc.c  printf.c  safeAPI.c
lib/misc/inc/: Osal.h  fifo.h  nt_heap_stats.h  nt_osal.h  sort.h
lib/misc/src/: fifo.c  nt_heap_stats.c  nt_osal.c  sort.c
lib/segger/SEGGER_RTT/: BUILD.gn  makefile.mk
lib/wificert/sigma_traffic/: sigma.h  sigma_shell.c  sigma_udp.c
modules/console/: BUILD.gn  Kconfig  makefile.mk  qapi_console.c  qccsdk_console.h  qcli.c  qcli.h  qcli_api.h  qcli_pal.c  qcli_pal.h  qcli_util.c  qcli_util.h
modules/core/hostif/: BUILD.gn  makefile.mk
modules/fs/: BUILD.gn  Kconfig  Kconfig.lfs  Kconfig.posix_fs  dirent.h  fcntl.h  fdtable.c  fdtable.h  fs.c  fs.h  fs_interface.h  fs_lib.c  fs_posix.c  fs_sys.h  littlefs_fs.c  littlefs_fs.h
modules/fw_upgrade/: BUILD.gn  Kconfig  fw_upgrade.c  fw_upgrade.h  fw_upgrade_mem.c  fw_upgrade_mem.h
modules/hal/: BUILD.gn  makefile.mk
modules/hal/inc/: ferm_hkadc_hal.h  ferm_i2c_hal.h  ferm_qspi_hal.h  ferm_qtmr_hal.h  ferm_uart_hal.h  qcc730v1_e307.h  qcc730v2.h  qccx.h
modules/qat/: BUILD.gn  Kconfig  qat.c  qat.h  qat_api.h  qat_spi.c  qat_spi.h  qat_uart.c  qat_uart.h  qat_util.c  qat_util.h
modules/supplicant/: BUILD.gn  Kconfig
modules/supplicant/inc/: qcc730_os.h  supplicant.h  supplicant_cfg.h  supplicant_cxt.h  wlan_8021x.h  wlan_8021x_cfg.h  wlan_8021x_cxt.h  wlan_8021x_glue.h
modules/supplicant/src/: supplicant.c  supplicant_qcc730.c
modules/wifi/: BUILD.gn  Kconfig  Kconfig.lib  Kconfig.rtt  Kconfig.wapp  Kconfig_p2p.lib
modules/wifi/inc/: CoreVerify.h  NT_Wfm_Task_Manager.h  ani_test.h  apps_ringif.h  apps_ringif_api.h  bd.h  (+226 more)
tools/Target_tools/: BUILD.gn  makefile.mk
tools/nvm_programmer/: BUILD.gn
(+912 files in other folders)
