
declare_args() {
    image_name = "FERMION"
    build_id = "8888"
    is_sdk = false
    board_name = "qcc730v2_evb11_hostless"

    PLATFORM_VERSION_FERMION = "E3_07"
    PLATFORM_VERSION_FERMION_V2 = "TAPEOUT_07"
    CHIP_VERSION_FERMION = 1
    XIP_FLASH_DEMO = false
    CONFIG_BIN_GEN = false
    CONFIG_FREERTOS_PLUS_POSIX = false
    CONFIG_FLASH_SHELL = false
    CONFIG_FTM_MODE = false
    CONFIG_SIGMA_TRAFFIC = false

    CONFIG_HEAP_STATISTIC = false
    CONFIG_WMI_EVENT = false
    CONFIG_RING_IF = false
    CONFIG_RING_IF_ONLY = false
    CONFIG_QCSPI_HFC_TEST = false
    CONFIG_QCSPI_HFC_ETH_ENABLE = false
    CONFIG_QCSPI_HFC_ATCMD_ENABLE = false
    CONFIG_SAP_POWERSAVE = false
    CONFIG_WFM_EN = false
    CONFIG_DEBUG_STATS = false
    CONFIG_DPM_STATS = false
    CONFIG_RA_DEBUG = false
    CONFIG_QTIMER = false
    CONFIG_PROF = false
    CONFIG_WPS = false
    CONFIG_ENABLE_P2P_MODE = false
    CONFIG_COEX_MCI = false
    CONFIG_COEX_PTA = false
    CONFIG_6GHZ = false
    CONFIG_6G_BAND = false
    CONFIG_LWIP_HEAP_POOL = false

    CONFIG_QCCSDK_CONSOLE=false
    CONFIG_QCCSDK_DEMO=false

    CONFIG_WLAN_QAPI = false
    CONFIG_PLATFORM_QAPI = true
    CONFIG_PLATFORM_SHELL = false
    CONFIG_WLAN = true
    CONFIG_I2CM_SHELL = false
    CONFIG_GPIO_SHELL = false
    CONFIG_UART_SHELL = false
    CONFIG_UART_QAPI = false
    CONFIG_PROF_SHELL = false
    CONFIG_WIFI_SHELL = false
    CONFIG_NET_SHELL = false
    CONFIG_NET = true
    CONFIG_LOWPOWER_SHELL = false
    CONFIG_UNITTEST_SHELL = false
    CONFIG_NT_DEVCFG_ASAP = 1
    CONFIG_NT_DEVCFG_XPA_ENABLE = 1
    CONFIG_NT_DEVCFG_FORMAT_AND_BANDWIDTH=0
    CONFIG_NT_DEVCFG_FTM_BURST_DURATION_INITIATOR=15
    CONFIG_NT_DEVCFG_FTM_BURST_DURATION_RESP=10
    CONFIG_NT_DEVCFG_FTM_BURST_PERIOD_INITIATOR=0
    CONFIG_NT_DEVCFG_FTM_BURST_PERIOD_RESP=40
    CONFIG_NT_DEVCFG_FTM_MIN_DELTA_INITIATOR=0
    CONFIG_NT_DEVCFG_FTM_MIN_DELTA_RESP=1
    CONFIG_NT_DEVCFG_FTM_MODE=1
    CONFIG_NT_DEVCFG_FTM_PER_BURST=2
    CONFIG_NT_DEVCFG_LOCATION_TYPE=1
    CONFIG_NT_DEVCFG_LOCATION=0
    CONFIG_NT_DEVCFG_NO_OF_BUR_EXP=2
    CONFIG_NT_DEVCFG_PARTIAL_TSF_TIMER_NO_PREFERENCE_INITIATOR=1
    CONFIG_NT_DEVCFG_PARTIAL_TSF_TIME_OFFSET_RESP=5
    CONFIG_NT_DEVCFG_WIFI_ON_ENABLE=0
    CONFIG_BOARD_QCC730V2_EVB11_HOSTLESS=false
    CONFIG_SOC_QCC730_HAS_UART=false
    CONFIG_SOC_QCC730_HAS_XPA_AUTO_CTRL=false
    CONFIG_SOC_QCC730_HAS_BT_COEX=false
    CONFIG_SOC_QCC730_HAS_I2C=false
    CONFIG_SOC_QCC730_HAS_QSPI_V1=false
    CONFIG_SOC_QCC730_HAS_QSPI_V2=false
    CONFIG_SOC_QCC730_HAS_SPI_SLAVE=false
    CONFIG_BOARD_QCC730_I2C_ENABLE=false
    CONFIG_BOARD_QCC730_BT_COEX_ENABLE=false
    CONFIG_BOARD_QCC730_QSPI_ENABLE=false
    CONFIG_BOARD_QCC730_QSPI_V2_QUAD_MODE=0
    CONFIG_BOARD_QCC730_QSPI_V1_OPTION=0
    CONFIG_BOARD_QCC730_UART_ENABLE=false
    CONFIG_BOARD_QCC730_UART_GPIO_OPTION=0
    CONFIG_BOARD_QCC730_XPA_AUTO_CTRL_ENABLE=false
    CONFIG_SOC_QCC730V2=false
    CONFIG_PBL_PREES_RESET_FOR_DTIM=false

    CONFIG_FW_UPGRADE = false
    CONFIG_FW_UPGRADE_FWD_SUPPORT_NUM = 2
    CONFIG_FW_UPGRADE_NO_FS = false
    CONFIG_FWUP_DEMO = false

    CONFIG_FLASH_XIP_SUPPORT = false
    
    CONFIG_MPU_ENABLE=false
    CONFIG_MPU_DEMO=false

    CONFIG_LIBWIFI_CORE = true
    CONFIG_HTTP_CLIENT = false
    CONFIG_HTTP_CLIENT_DEMO = false
    CONFIG_MBEDTLS_USE_PKA = false
    CONFIG_MBEDTLS_PKA_TEST = false
    CONFIG_MQTT_CLIENT = false
    CONFIG_MQTT_CLIENT_DEMO = false
    CONFIG_MQTT_PLAINTEXT_DEMO = false
    CONFIG_MQTT_BASIC_TLS_DEMO = false
    CONFIG_MQTT_MUTUAL_AUTH_DEMO = false
    CONFIG_MGMT_FILTER_DEMO=false

    CONFIG_HTTP_CLIENT = false
    CONFIG_HTTP_CLIENT_DEMO = false

    CONFIG_HTTP_SERVER = false
    CONFIG_HTTP_SERVER_DEMO = false
    CONFIG_QAT_HTTP_SERVER_DEMO = false
    CONFIG_CPR_ENABLE = true
    CONFIG_RNG_TEST = false
    CONFIG_SNTP_CLIENT = false
    CONFIG_SNTP_CLIENT_DEMO = false
    CONFIG_NET_SSL_DEMO = false
    CONFIG_MATTER_ENABLE=false
    CONFIG_GENERATE_MATTER_LIB=false
    CONFIG_MATTER_LIGHTING_DEMO=false
    CONFIG_MATTER_SWITCH_DEMO=false

    CONFIG_QAT=false
    CONFIG_QAT_COMMON_DEMO=false
    CONFIG_QAT_MQTT_DEMO=false
    CONFIG_QAT_TCPIP_DEMO=false
    CONFIG_QAT_WLAN_DEMO=false
    CONFIG_QAT_HTTPC_DEMO=false
    CONFIG_QAT_OTA_DEMO=false
    CONFIG_QAT_FSTORE_DEMO=false
    CONFIG_QAT_POWERSAVE_DEMO=false
    CONFIG_QAT_CB_SIZE_MTU_MULTIPLIER=10
    CONFIG_QAT_CB_QUEUE_MAX_LENGTH=10

    CONFIG_QAT_TRANSMISSION_MODULE=0

    CONFIG_MBEDTLS_AES_ALT = false
    CONFIG_MBEDTLS_CCM_ALT = false
    CONFIG_MBEDTLS_SHA_ALT = false

    CONFIG_WPS_LIB=false
    CONFIG_LWIP_MULTIPLE_STREAMS = false

    CONFIG_WIFI_FW_COREDUMP_SUPPORT= false

    CONFIG_SUPPORT_LWIP_RAW_SOCKET = false

    CONFIG_SECUREFS_DEMO = false

    CONFIG_NO_STDOUT_DEBUG = false

    CONFIG_ENABLE_SUPPLICANT = false

    CONFIG_WLAN_8021X = false
}
