# Copyright (c) 2024 Qualcomm Innovation Center, Inc. All rights reserved.
#SPDX-License-Identifier: BSD-3-Clause-Clear
#
#import("${root_build_dir}/mainconfig.gni")
import("//configs_decl.gni")

hello_world_inc = [
    "src",
]

hello_world_src = [
    "src/hello_world_main.c",
]

not_needed("*", [ ])

config("_config") {
    if (image_name == "FERMION_HELLO_WORLD") {
        include_dirs = hello_world_inc
    }
}

source_set("hello_world") {
    if (image_name == "FERMION_HELLO_WORLD") {
        sources = hello_world_src
    }
}
