#Copyright (c) 2024 Qualcomm Innovation Center, Inc. All rights reserved.
#SPDX-License-Identifier: BSD-3-Clause-Clear
import("//configs_decl.gni")

fs_inc = [
    ".",
]

fs_src = [
    "littlefs_fs.c",
    "fs_posix.c",
    "fs.c",
    "fdtable.c",
    "fs_lib.c",
    "../../../comp/littlefs/lfs.c",
    "../../../comp/littlefs/lfs_util.c",
]

config("_config") {
    include_dirs = fs_inc
}

source_set("fs") {
    sources = fs_src
}

