#Copyright (c) 2024 Qualcomm Innovation Center, Inc. All rights reserved.
#SPDX-License-Identifier: BSD-3-Clause-Clear
#
#import("${root_build_dir}/mainconfig.gni")
import("//configs_decl.gni")

hal_inc = [
    "inc",
    "qcc730/qspi",
    "qcc730/flash",
    "qcc730/i2c",
    "qcc730/fs",
    "qcc730/qtmr",
    "qcc730/prof",
    "qcc730/uart",
    "qcc730/gpio",
    "qcc730/wdt",
    "qcc730/qcspi",
    "qcc730/rram",
    "qcc730/security",
]

config("_config") {
    include_dirs = hal_inc
    defines = []
    if (CONFIG_FLASH_XIP_SUPPORT){
        defines += [ "FLASH_XIP_SUPPORT" ]
    }
}

source_set("hal") {
    sources = [
        "qcc730/i2c/ferm_i2c.c",
        "qcc730/qtmr/qtmr.c",
        "qcc730/qtmr/timer.c",
        "qcc730/uart/uart.c",
        "qcc730/gpio/nt_gpio.c",
        "qcc730/wdt/nt_wdt.c",
        "qcc730/qcspi/qcspi_slave.c",
        "qcc730/rram/nt_mem.c",
        "qcc730/security/ecc_lock.c",
        "qcc730/security/elppka.c",
        "qcc730/security/pka.c",
        "qcc730/security/pka_target.c",
        "qcc730/security/nt_security_ip.c",
        "qcc730/security/nt_prng.c",
        "qcc730/security/nt_prng_integration.c",
        "qcc730/security/CeCL.c",
        "qcc730/security/CeCL_Clk.c",
        "qcc730/security/CeEL.c",
        "qcc730/security/CeEL_Dm.c",
        "qcc730/security/CeML.c",
        "qcc730/security/CeEL_Env.c",
    ]
    if (CONFIG_QTIMER) {
        sources += [ "qcc730/qtmr/ferm_qtmr.c" ]
    }
    if (CONFIG_PROF) {
        sources += [ "qcc730/prof/ferm_prof.c" ]
    }
    if (CONFIG_BOARD_QCC730_QSPI_ENABLE) {
        sources += [ "qcc730/qspi/ferm_qspi.c" ]
        sources += [ "qcc730/flash/ferm_flash.c" ]
        sources += [ "qcc730/flash/ferm_flash_config.c"]
    }    
}
